                                                         -*- coding: utf-8 -*-
Changes with Apache 2.5.0

  *) mpm_event, mpm_worker: Fix computation of MinSpareThreads' lower bound
     according the number of listeners buckets.  [Yann Ylavic]

  *) mod_proxy_http2: using HTTP/2 flow control for backend streams by 
     observing data actually send out on the frontend h2 connection. 
     [Stefan Eissing]

  *) mpm: Generalise the ap_mpm_register_socket functions to accept pipes
     or sockets. [Graham Leggett]

  *) core: New CGIVar directive can configure REQUEST_URI to represent the
     current URI being processed instead of always the original request.
     [Jeff Trawick]

  *) core: Extend support for setting aside data from the network input filter
     to any connection or request input filter. [Graham Leggett]

  *) mod_ssl: Add "no_crl_for_cert_ok" flag to SSLCARevocationCheck directive
     to opt-in previous behaviour (2.2) with CRLs verification when checking
     certificate(s) with no corresponding CRL.  [Yann Ylavic]

  *) mod_proxy_http2: rescheduling of requests that have not been processed
     by the backend when receiving a GOAWAY frame before done.
     [Stefan Eissing]
     
  *) core: Split ap_create_request() from ap_read_request(). [Graham Leggett]

  *) ab: Use caseless matching for HTTP tokens (e.g. content-length). PR 59111.
     [Yann Ylavic]

  *) mod_auth_digest: Fix compatibility with expression-based Authname. PR59039.
     [Eric Covener]

  *) mpm: Add a complete_connection hook that confirms whether an MPM is allowed
     to leave the WRITE_COMPLETION phase. Move filter code out of the MPMs.
     [Graham Leggett]

  *) mod_proxy_http2: using single connection for several requests *if*
     master connection uses HTTP/2 itself. Not yet hardened under load.
     [Stefan Eissing]

  *) core: Added support for HTTP code 451. PR58985.
     [Yehuda Katz <yehuda ymkatz.net>, Jim Jagielski]
